--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,32 @@
 /* css styles */
-body {font-family: Arial;}
+body {
+  background-color: #f1f1f1;
+}
 
+#conteudo {
+  loading="lazy" width: 70%;
+  float: right;
+  text-align: center;
+}
+
+#rodape {
+  font-family: verdana;
+  text-align: center;  
+  color: #1C77C3;
+}
+
+h1 {
+  font-family: verdana;
+  color: #091E05;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  color: #091E05;
+  font-size: 20px;
+  text-align: center;
+}
 /* Style the tab */
 .tab {
   overflow: hidden;
