--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,92 @@
-/* css styles */
-body {
-  background-color: #f1f1f1;
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+    }
+
+#header-container{
+  background-color: white;
 }
 
-#conteudo {
-  loading="lazy" width: 70%;
-  float: right;
-  text-align: center;
+.logo{
+  display:block;
+  position: relative;
 }
 
-#rodape {
-  font-family: verdana;
-  text-align: center;  
-  color: #1C77C3;
+.container-greybkgd{
+  background-color: #f2f2f2;
 }
 
-h1 {
-  font-family: verdana;
-  color: #091E05;
-  text-align: center;
+.section {
+  padding: 25px 0;
+}
+.navbar-default{
+  background-color:white;
+  border: 0;
 }
 
-p {
-  font-family: verdana;
-  color: #091E05;
-  font-size: 20px;
-  text-align: center;
+.navbar-nav{
+  margin-left: -30px;
 }
-/* Style the tab */
-.tab {
-  overflow: hidden;
+.intro-container{
+  width: 100%;
+  clear:both;
+}
+
+.image{
+  width: 200px;
+  float:left;
+}
+
+.introTxt{
+ float: left; 
+  padding: 10px; 
+}
+
+.box{
+  background-color: #fff;
+  border: #ccc 1px solid;
+  padding: 50px;
+  display:block;
+  margin:5px;
+  width: 100%;
+  box-sizing: border-box;
+
+}
+h2{
+  clear:both;
+}
+imgRight, imgLeft{
+  margin:10px;
+}
+
+.container-aboutUs{
+  width: 100%;
+  background-color: #fff;
+  border: 1px #ccc solid;
+  padding:10px;
+  
+}
+
+.ourHistory{
+  width: 50%;
+  padding: 10px;
+  float:left;
+
+}
+.gastroenterology{
+  width: 50%;
+  padding: 10px;
+  float:left;
+
+}
+
+.footer-container{
+  width: 100%;
+  background-color: #fff;
   border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  /* display: contents; */
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-  height: 100%;
-}
-.h_iframe iframe {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+  padding: 10px;
+  margin-top: 25px;
 }
